syntax = "proto3";

package smq;

option go_package = "./proto";


service SuhaibMessageQueue {
    rpc Connect (ConnectRequest) returns (ConnectResponse) {}
    rpc GetLatestOffset (GetLatestOffsetRequest) returns (GetLatestOffsetResponse) {}
    rpc CreateTopic (CreateTopicRequest) returns (CreateTopicResponse) {}
    
    // Single message versions
    rpc Produce (ProduceRequest) returns (ProduceResponse) {}
    rpc Consume (ConsumeRequest) returns (ConsumeResponse) {}
    
    // Stream versions
    rpc StreamProduce (stream ProduceRequest) returns (ProduceResponse) {}
    rpc StreamConsume (ConsumeRequest) returns (stream ConsumeResponse) {}

    rpc DeleteUntilOffset (DeleteUntilOffsetRequest) returns (DeleteUntilOffsetResponse) {}
}

message ConnectRequest {
}

message ConnectResponse {
}

message GetLatestOffsetRequest {
    string topic = 1;
}

message GetLatestOffsetResponse {
    int64 offset = 1;
}

message CreateTopicRequest {
    string topic = 1;
}

message CreateTopicResponse {
}

message ProduceRequest {
    string topic = 1;
    bytes message = 2;
}

message ProduceResponse {
    int64 offset = 1;
}

message ConsumeRequest {
    string topic = 1;
    int64 offset = 2;
}

message ConsumeResponse {
    bytes message = 1;
    int64 offset = 2;
}

message DeleteUntilOffsetRequest {
    string topic = 1;
    int64 offset = 2;
}

message DeleteUntilOffsetResponse {
}